[package]
name = "codebuddy-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"]}
# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = {version = "3", features = ["time_0_3"]}
# -- Web
axum = {version = "0.7.9", features = ["macros"]}
axum-extra = "0.9.6"
tower-http = {version = "0.6.2", features = ["fs", "cors"] }
tower-cookies = "0.10.0"
# -- Tracing
tracing="0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
# -- Data
sea-orm = {version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "sea-query-binder"]}
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
# -- Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
mime = "0.3"
futures-util = "0.3"
base64-url = "2"
jsonwebtoken = "9.3.0"
# -- Others
once_cell = "1.8"
anyhow = "1"
dotenv = "0.15.0"
thiserror = "1.0.49"
async-trait = "0.1"
tempfile = "3.3"
reqwest = { version = "0.11", features = ["multipart"] }
strum_macros = "0.24"
uuid = {version = "1", features = ["v4", "fast-rng"]}
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
chrono = "0.4.39"
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }